# duckgs

./: Makefile  README.md  duckgs.py  pyproject.toml  requirements.txt
